--- a/icores/x310_HG_rfnoc_image_core.yml
+++ b/icores/x310_HG_rfnoc_image_core.yml
@@ -36,6 +36,22 @@ stream_endpoints:
     ctrl: False                     # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
     buff_size: 4096                 # Ingress buffer size for data
+  ep6:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep7:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep8:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep9:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
 
 # A list of all NoC blocks in design
 # ----------------------------------
@@ -60,6 +76,21 @@ noc_blocks:
       NUM_PORTS: 2
   radio1:
     block_desc: 'radio_2x64.yml'
+  fft0:
+    block_desc: 'fft_1x64.yml'
+  fir0:
+    block_desc: 'fir_filter.yml'
+    parameters:
+      NUM_PORTS: 1
+      BLANK_OUTPUT: 1
+  siggen0:
+    block_desc: 'siggen.yml'
+    parameters:
+      NUM_PORTS: 1
+  window0:
+    block_desc: 'window.yml'
+    parameters:
+      NUM_PORTS: 1
   replay0:
     block_desc: 'replay.yml'
     parameters:
@@ -100,6 +131,14 @@ connections:
   - { srcblk: ep5,     srcport: out0,  dstblk: replay0, dstport: in_1 }
   # replay0(1) to ep5
   - { srcblk: replay0, srcport: out_1, dstblk: ep5,     dstport: in0  }
+  # Custom block connections
+  - { srcblk: siggen0, srcport: out_0, dstblk: ep6,     dstport: in0  }
+  - { srcblk: ep7,     srcport: out0,  dstblk: fir0,    dstport: in_0 }
+  - { srcblk: fir0,    srcport: out_0, dstblk: ep7,     dstport: in0  }
+  - { srcblk: ep8,     srcport: out0,  dstblk: window0, dstport: in_0 }
+  - { srcblk: window0, srcport: out_0, dstblk: ep8,     dstport: in0  }
+  - { srcblk: ep9,     srcport: out0,  dstblk: fft0,    dstport: in_0 }
+  - { srcblk: fft0,    srcport: out_0, dstblk: ep9,     dstport: in0  }
   # BSP Connections
   - { srcblk: radio0, srcport: ctrl_port, dstblk: _device_, dstport: ctrlport_radio0 }
   - { srcblk: radio1, srcport: ctrl_port, dstblk: _device_, dstport: ctrlport_radio1 }
@@ -117,10 +156,14 @@ connections:
 #         - dstblk  = Destination block to connect
 #         - dstport = Clock domain on the destination block to connect
 clk_domains:
-    - { srcblk: _device_, srcport: radio, dstblk: radio0, dstport: radio }
-    - { srcblk: _device_, srcport: ce,    dstblk: ddc0,   dstport: ce    }
-    - { srcblk: _device_, srcport: ce,    dstblk: duc0,   dstport: ce    }
-    - { srcblk: _device_, srcport: radio, dstblk: radio1, dstport: radio }
-    - { srcblk: _device_, srcport: ce,    dstblk: ddc1,   dstport: ce    }
-    - { srcblk: _device_, srcport: ce,    dstblk: duc1,   dstport: ce    }
-    - { srcblk: _device_, srcport: dram,  dstblk: replay0, dstport: mem  }
+  - { srcblk: _device_, srcport: radio, dstblk: radio0,  dstport: radio }
+  - { srcblk: _device_, srcport: ce,    dstblk: ddc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: ce,    dstblk: duc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio, dstblk: radio1,  dstport: radio }
+  - { srcblk: _device_, srcport: ce,    dstblk: ddc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: ce,    dstblk: duc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: dram,  dstblk: replay0, dstport: mem   }
+  - { srcblk: _device_, srcport: ce,    dstblk: fir0,    dstport: ce    }
+  - { srcblk: _device_, srcport: ce,    dstblk: siggen0, dstport: ce    }
+  - { srcblk: _device_, srcport: ce,    dstblk: window0, dstport: ce    }
+  - { srcblk: _device_, srcport: ce,    dstblk: fft0,    dstport: ce    }
