--- a/icores/e320_1G_rfnoc_image_core.yml
+++ b/icores/e320_1G_rfnoc_image_core.yml
@@ -25,11 +25,27 @@ stream_endpoints:
   ep2:                       # Stream endpoint name
     ctrl: False                     # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
-    buff_size: 8192                 # Ingress buffer size for data
+    buff_size: 4096                 # Ingress buffer size for data
   ep3:                       # Stream endpoint name
     ctrl: False                     # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
-    buff_size: 8192                 # Ingress buffer size for data
+    buff_size: 4096                 # Ingress buffer size for data
+  ep4:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep5:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep6:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep7:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
 
 # A list of all NoC blocks in design
 # ----------------------------------
@@ -44,6 +60,21 @@ noc_blocks:
       NUM_PORTS: 2
   radio0:
     block_desc: 'radio_2x64.yml'
+  fft0:
+    block_desc: 'fft_1x64.yml'
+  fir0:
+    block_desc: 'fir_filter.yml'
+    parameters:
+      NUM_PORTS: 1
+      BLANK_OUTPUT: 1
+  siggen0:
+    block_desc: 'siggen.yml'
+    parameters:
+      NUM_PORTS: 1
+  window0:
+    block_desc: 'window.yml'
+    parameters:
+      NUM_PORTS: 1
   fifo0:
     block_desc: 'axi_ram_fifo_2x64.yml'
     parameters:
@@ -81,6 +112,14 @@ connections:
   # ep3 to fifo0(1)
   - { srcblk: ep3,    srcport: out0,  dstblk: fifo0,  dstport: in_1 }
   - { srcblk: fifo0,  srcport: out_1, dstblk: ep3,    dstport: in0  }
+  # Custom block connections
+  - { srcblk: siggen0, srcport: out_0, dstblk: ep4,     dstport: in0  }
+  - { srcblk: ep5,     srcport: out0,  dstblk: fir0,    dstport: in_0 }
+  - { srcblk: fir0,    srcport: out_0, dstblk: ep5,     dstport: in0  }
+  - { srcblk: ep6,     srcport: out0,  dstblk: window0, dstport: in_0 }
+  - { srcblk: window0, srcport: out_0, dstblk: ep6,     dstport: in0  }
+  - { srcblk: ep7,     srcport: out0,  dstblk: fft0,    dstport: in_0 }
+  - { srcblk: fft0,    srcport: out_0, dstblk: ep7,     dstport: in0  }
   # BSP Connections
   - { srcblk: radio0,   srcport: ctrl_port,   dstblk: _device_, dstport: ctrl_port   }
   - { srcblk: _device_, srcport: x300_radio,  dstblk: radio0,   dstport: x300_radio  }
@@ -95,7 +134,11 @@ connections:
 #         - dstblk  = Destination block to connect
 #         - dstport = Clock domain on the destination block to connect
 clk_domains:
-  - { srcblk: _device_, srcport: radio,      dstblk: radio0, dstport: radio }
-  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: duc0,   dstport: ce    }
-  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: ddc0,   dstport: ce    }
-  - { srcblk: _device_, srcport: dram,       dstblk: fifo0,  dstport: mem   }
+  - { srcblk: _device_, srcport: radio,      dstblk: radio0,  dstport: radio }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: duc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: ddc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: dram,       dstblk: fifo0,   dstport: mem   }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: fir0,    dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: siggen0, dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: window0, dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: fft0,    dstport: ce    }
