--- a/icores/n320_XG_rfnoc_image_core.yml
+++ b/icores/n320_XG_rfnoc_image_core.yml
@@ -7,24 +7,40 @@ version: '1.0'                          # File version
 rfnoc_version: '1.0'                    # RFNoC protocol version
 chdr_width: 64                          # Bit width of the CHDR bus for this image
 device: 'n320'
-default_target: 'N320_HG'
+default_target: 'N320_XG'
 
 # A list of all stream endpoints in design
 # ----------------------------------------
 stream_endpoints:
-  ep0:                         # Stream endpoint name
-    ctrl: True                        # Endpoint passes control traffic
-    data: True                        # Endpoint passes data traffic
-    buff_size: 65536                  # Ingress buffer size for data
-  ep1:                         # Stream endpoint name
-    ctrl: False                       # Endpoint passes control traffic
-    data: True                        # Endpoint passes data traffic
-    buff_size: 65536                  # Ingress buffer size for data
+  ep0:                       # Stream endpoint name
+    ctrl: True                      # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 65536                # Ingress buffer size for data
+  ep1:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 65536                # Ingress buffer size for data
   ep2:                       # Stream endpoint name
     ctrl: False                     # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
     buff_size: 4096                 # Ingress buffer size for data
   ep3:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep4:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep5:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep6:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size: 4096                 # Ingress buffer size for data
+  ep7:                       # Stream endpoint name
     ctrl: False                     # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
     buff_size: 4096                 # Ingress buffer size for data
@@ -52,6 +68,21 @@ noc_blocks:
       NUM_PORTS: 1
   radio1:
     block_desc: 'radio_1x64.yml'
+  fft0:
+    block_desc: 'fft_1x64.yml'
+  fir0:
+    block_desc: 'fir_filter.yml'
+    parameters:
+      NUM_PORTS: 1
+      BLANK_OUTPUT: 1
+  siggen0:
+    block_desc: 'siggen.yml'
+    parameters:
+      NUM_PORTS: 1
+  window0:
+    block_desc: 'window.yml'
+    parameters:
+      NUM_PORTS: 1
   replay0:
     block_desc: 'replay.yml'
     parameters:
@@ -66,18 +97,27 @@ noc_blocks:
 #         - dstblk  = Destination block to connect
 #         - dstport = Port on the destination block to connect
 connections:
-  - { srcblk: ep0,    srcport: out0,  dstblk: duc0,   dstport: in_0 }
-  - { srcblk: duc0,   srcport: out_0, dstblk: radio0, dstport: in_0 }
-  - { srcblk: radio0, srcport: out_0, dstblk: ddc0,   dstport: in_0 }
-  - { srcblk: ddc0,   srcport: out_0, dstblk: ep0,    dstport: in0  }
-  - { srcblk: ep1,    srcport: out0,  dstblk: duc1,   dstport: in_0 }
-  - { srcblk: duc1,   srcport: out_0, dstblk: radio1, dstport: in_0 }
-  - { srcblk: radio1, srcport: out_0, dstblk: ddc1,   dstport: in_0 }
-  - { srcblk: ddc1,   srcport: out_0, dstblk: ep1,    dstport: in0  }
+  - { srcblk: ep0,     srcport: out0,  dstblk: duc0,    dstport: in_0 }
+  - { srcblk: duc0,    srcport: out_0, dstblk: radio0,  dstport: in_0 }
+  - { srcblk: radio0,  srcport: out_0, dstblk: ddc0,    dstport: in_0 }
+  - { srcblk: ddc0,    srcport: out_0, dstblk: ep0,     dstport: in0  }
+  - { srcblk: ep1,     srcport: out0,  dstblk: duc1,    dstport: in_0 }
+  - { srcblk: duc1,    srcport: out_0, dstblk: radio1,  dstport: in_0 }
+  - { srcblk: radio1,  srcport: out_0, dstblk: ddc1,    dstport: in_0 }
+  - { srcblk: ddc1,    srcport: out_0, dstblk: ep1,     dstport: in0  }
   - { srcblk: ep2,     srcport: out0,  dstblk: replay0, dstport: in_0 }
   - { srcblk: replay0, srcport: out_0, dstblk: ep2,     dstport: in0  }
   - { srcblk: ep3,     srcport: out0,  dstblk: replay0, dstport: in_1 }
   - { srcblk: replay0, srcport: out_1, dstblk: ep3,     dstport: in0  }
+  # Custom block connections
+  - { srcblk: siggen0, srcport: out_0, dstblk: ep4,     dstport: in0  }
+  - { srcblk: ep5,     srcport: out0,  dstblk: fir0,    dstport: in_0 }
+  - { srcblk: fir0,    srcport: out_0, dstblk: ep5,     dstport: in0  }
+  - { srcblk: ep6,     srcport: out0,  dstblk: window0, dstport: in_0 }
+  - { srcblk: window0, srcport: out_0, dstblk: ep6,     dstport: in0  }
+  - { srcblk: ep7,     srcport: out0,  dstblk: fft0,    dstport: in_0 }
+  - { srcblk: fft0,    srcport: out_0, dstblk: ep7,     dstport: in0  }
+  # BSP Connections
   - { srcblk: radio0, srcport: ctrl_port, dstblk: _device_, dstport: ctrlport_radio0 }
   - { srcblk: radio1, srcport: ctrl_port, dstblk: _device_, dstport: ctrlport_radio1 }
   - { srcblk: replay0, srcport: axi_ram, dstblk: _device_, dstport: dram }
@@ -94,10 +134,14 @@ connections:
 #         - dstblk  = Destination block to connect
 #         - dstport = Clock domain on the destination block to connect
 clk_domains:
-  - { srcblk: _device_, srcport: radio, dstblk: radio0, dstport: radio }
-  - { srcblk: _device_, srcport: radio, dstblk: ddc0,   dstport: ce    }
-  - { srcblk: _device_, srcport: radio, dstblk: duc0,   dstport: ce    }
-  - { srcblk: _device_, srcport: radio, dstblk: radio1, dstport: radio }
-  - { srcblk: _device_, srcport: radio, dstblk: ddc1,   dstport: ce    }
-  - { srcblk: _device_, srcport: radio, dstblk: duc1,   dstport: ce    }
-  - { srcblk: _device_, srcport: dram,  dstblk: replay0, dstport: mem  }
+  - { srcblk: _device_, srcport: radio,      dstblk: radio0,  dstport: radio }
+  - { srcblk: _device_, srcport: radio,      dstblk: ddc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio,      dstblk: duc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio,      dstblk: radio1,  dstport: radio }
+  - { srcblk: _device_, srcport: radio,      dstblk: ddc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio,      dstblk: duc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: dram,       dstblk: replay0, dstport: mem   }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: fir0,    dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: siggen0, dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: window0, dstport: ce    }
+  - { srcblk: _device_, srcport: rfnoc_chdr, dstblk: fft0,    dstport: ce    }
