--- a/icores/x410_X4_200_rfnoc_image_core.yml
+++ b/icores/x410_X4_200_rfnoc_image_core.yml
@@ -17,34 +17,34 @@ stream_endpoints:
     ctrl: True                      # Endpoint passes control traffic
     data: True                      # Endpoint passes data traffic
     buff_size_bytes: 262144         # Ingress buffer size for data
-  ep1:
-    ctrl: False
-    data: True
-    buff_size_bytes: 262144
-  ep2:
-    ctrl: False
-    data: True
-    buff_size_bytes: 262144
-  ep3:
-    ctrl: False
-    data: True
-    buff_size_bytes: 262144
+  ep1:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size_bytes: 262144         # Ingress buffer size for data
+  ep2:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size_bytes: 262144         # Ingress buffer size for data
+  ep3:                       # Stream endpoint name
+    ctrl: False                     # Endpoint passes control traffic
+    data: True                      # Endpoint passes data traffic
+    buff_size_bytes: 262144         # Ingress buffer size for data
   ep4:
     ctrl: False
     data: True
-    buff_size_bytes: 4096
+    buff_size_bytes: 8192
   ep5:
     ctrl: False
     data: True
-    buff_size_bytes: 4096
+    buff_size_bytes: 8192
   ep6:
     ctrl: False
     data: True
-    buff_size_bytes: 4096
+    buff_size_bytes: 8192
   ep7:
     ctrl: False
     data: True
-    buff_size_bytes: 4096
+    buff_size_bytes: 8192
 
 # A list of all NoC blocks in design
 # ----------------------------------
@@ -75,12 +75,21 @@ noc_blocks:
     parameters:
       NUM_PORTS: 2
       NIPC: RADIO_NIPC
-  replay0:
-    block_desc: 'replay.yml'
+  fft0:
+    block_desc: 'fft_1x64.yml'
+  fir0:
+    block_desc: 'fir_filter.yml'
     parameters:
-      NUM_PORTS: 4
-      MEM_DATA_W: 64
-      MEM_ADDR_W: 32
+      NUM_PORTS: 1
+      BLANK_OUTPUT: 1
+  siggen0:
+    block_desc: 'siggen.yml'
+    parameters:
+      NUM_PORTS: 1
+  window0:
+    block_desc: 'window.yml'
+    parameters:
+      NUM_PORTS: 1
 
 # A list of all static connections in design
 # ------------------------------------------
@@ -115,17 +124,14 @@ connections:
   # radio1(1) to ep3 - RFB:1 RX
   - { srcblk: radio1,   srcport: out_1,       dstblk: ddc1,     dstport: in_1            }
   - { srcblk: ddc1,     srcport: out_1,       dstblk: ep3,      dstport: in0             }
-  #
-  # Replay
-  - { srcblk: ep4,      srcport: out0,        dstblk: replay0,  dstport: in_0            }
-  - { srcblk: replay0,  srcport: out_0,       dstblk: ep4,      dstport: in0             }
-  - { srcblk: ep5,      srcport: out0,        dstblk: replay0,  dstport: in_1            }
-  - { srcblk: replay0,  srcport: out_1,       dstblk: ep5,      dstport: in0             }
-  - { srcblk: ep6,      srcport: out0,        dstblk: replay0,  dstport: in_2            }
-  - { srcblk: replay0,  srcport: out_2,       dstblk: ep6,      dstport: in0             }
-  - { srcblk: ep7,      srcport: out0,        dstblk: replay0,  dstport: in_3            }
-  - { srcblk: replay0,  srcport: out_3,       dstblk: ep7,      dstport: in0             }
-  #
+  # Custom block connections
+  - { srcblk: siggen0, srcport: out_0, dstblk: ep4,     dstport: in0  }
+  - { srcblk: ep5,     srcport: out0,  dstblk: fir0,    dstport: in_0 }
+  - { srcblk: fir0,    srcport: out_0, dstblk: ep4,     dstport: in0  }
+  - { srcblk: ep6,     srcport: out0,  dstblk: window0, dstport: in_0 }
+  - { srcblk: window0, srcport: out_0, dstblk: ep6,     dstport: in0  }
+  - { srcblk: ep7,     srcport: out0,  dstblk: fft0,    dstport: in_0 }
+  - { srcblk: fft0,    srcport: out_0, dstblk: ep7,     dstport: in0  }
   # BSP Connections
   - { srcblk: radio0,   srcport: ctrlport,    dstblk: _device_, dstport: ctrlport_radio0 }
   - { srcblk: radio1,   srcport: ctrlport,    dstblk: _device_, dstport: ctrlport_radio1 }
@@ -133,7 +139,6 @@ connections:
   - { srcblk: _device_, srcport: radio1,      dstblk: radio1,   dstport: radio           }
   - { srcblk: _device_, srcport: time,        dstblk: radio0,   dstport: time            }
   - { srcblk: _device_, srcport: time,        dstblk: radio1,   dstport: time            }
-  - { srcblk: replay0,  srcport: axi_ram,     dstblk: _device_, dstport: dram            }
 
 # A list of all clock domain connections in design
 # ------------------------------------------
@@ -143,10 +148,13 @@ connections:
 #         - dstblk  = Destination block to connect
 #         - dstport = Clock domain on the destination block to connect
 clk_domains:
-    - { srcblk: _device_, srcport: radio,    dstblk: radio0,  dstport: radio }
-    - { srcblk: _device_, srcport: radio_2x, dstblk: duc0,    dstport: ce    }
-    - { srcblk: _device_, srcport: radio_2x, dstblk: ddc0,    dstport: ce    }
-    - { srcblk: _device_, srcport: radio,    dstblk: radio1,  dstport: radio }
-    - { srcblk: _device_, srcport: radio_2x, dstblk: duc1,    dstport: ce    }
-    - { srcblk: _device_, srcport: radio_2x, dstblk: ddc1,    dstport: ce    }
-    - { srcblk: _device_, srcport: dram,     dstblk: replay0, dstport: mem   }
+  - { srcblk: _device_, srcport: radio,    dstblk: radio0,  dstport: radio }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: duc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: ddc0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio,    dstblk: radio1,  dstport: radio }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: duc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: ddc1,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: fir0,    dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: siggen0, dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: window0, dstport: ce    }
+  - { srcblk: _device_, srcport: radio_2x, dstblk: fft0,    dstport: ce    }
